--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
+  "name": "express-router",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "morgan": "^1.10.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PatrickCuentas/express-demo.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PatrickCuentas/express-demo/issues"
+  },
+  "homepage": "https://github.com/PatrickCuentas/express-demo#readme"
 }
